# zuper_nodes

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Makefile.version  project.pp1.yaml  pyproject.toml  requirements.txt  setup.json  setup.py
.circleci/: config.yml  zuper_nodes_tests.tests
docs/: Makefile  idea-composition.md  idea-timestamping.md  performance.py  protocol-hs.md  protocol.md
src/zuper_nodes/: __init__.py  col_logging.py  compatibility.py  language.py  language_parse.py  language_recognize.py  structures.py
src/zuper_nodes_tests/: __init__.py  test_language.py  test_protocol.py  test_subprotocol.py
src/zuper_nodes_wrapper/: __init__.py  constants.py  identify.py  interface.py  launcher.py  meta_protocol.py  profiler.py  reading.py  streams.py  struct.py  utils.py  wrapper.py  wrapper_outside.py  writing.py
