[project]
name = "zuper-nodes-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]
dependencies = [
    "PyYAML",
    "cbor2",
    "networkx",
    "numpy",
    "pyparsing",
    "zuper-commons-z7",
    "zuper-ipce-z7",
    "zuper-typing-z7",
    ]

[project.scripts]
zuper-node-identify = "zuper_nodes_wrapper.identify:identify_main"

[project.optional-dependencies]
test = [
    "pydot",
    ]

[tool]
[tool.poetry]
name = "zuper-nodes-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "zuper_nodes"},
    {from = "src", include = "zuper_nodes_wrapper"},
    ]

[tool.poetry.scripts]
zuper-node-identify = "zuper_nodes_wrapper.identify:identify_main"

[tool.setuptools]
packages = [
    "zuper_nodes",
    "zuper_nodes_wrapper",
    ]
package-dir = {"" = "src"}

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
